--- a/crm/templates/crm/service_delete.html
+++ b/crm/templates/crm/service_delete.html
@@ -1,5 +1,5 @@
  {% block body_block %}
-    <h1>Delete {{ product.name }}?</h1>
+    <h1>Delete {{ service.name }}?</h1>
 
     <form method="post">
         {% csrf_token %}
