--- a/crm/templates/crm/product_delete.html
+++ b/crm/templates/crm/product_delete.html
@@ -4,7 +4,7 @@
     <form method="post">
         {% csrf_token %}
         <input type="submit" class="btn btn-danger" value="Delete">
-        <a href="{% url 'crm:home' pk=product.cust_number %} ">Cancel</a>
+        <a href="{% url 'crm:home' pk=product.product %} ">Cancel</a>
 
     </form>
 
